--- a/config/configuration_test.conf
+++ b/config/configuration_test.conf
@@ -1,4 +1,7 @@
 CHOST="x86_64-linux-gnu"
-CXXFLAGS="${CHOST}"
+CXXHOST="${CHOST}"
+CFLAGS="binduntils"
+CXXFLAGS="${CFLAGS}"
 CPUFLAGS="sse3 sse4"
 GPUVIDEO="intel"
+MAKEOPTS="-j4"
